update remoteapi/java gradle build to add bintray plugin for publishing artifacts
SVN r48784 |2017-01-18 22:34:07 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ buildscript {
   }
   dependencies {
     classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
-    classpath "com.moowork.gradle:gradle-node-plugin:0.13"
+    classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:${bintrayPluginVersion}"
+    classpath "com.moowork.gradle:gradle-node-plugin:${gradleNodePluginVersion}"
     classpath "org.labkey.build:versioning:${versioningPluginVersion}"
     classpath "org.labkey.build:gradlePlugins:${gradlePluginsVersion}"
   }
