--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,8 @@ buildFromSource=true
 labkeyVersion=17.10-SNAPSHOT
 
 # The current version number for the gradle plugins.
+bintrayPluginVersion=1.7.3
+gradleNodePluginVersion=0.13
 gradlePluginsVersion=1.0-SNAPSHOT
 versioningPluginVersion=1.0-SNAPSHOT
 
