Converting Installer build to Gradle
SVN r48830 |2017-01-21 01:05:20 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ gradleNodePluginVersion=0.13
 gradlePluginsVersion=1.0-SNAPSHOT
 versioningPluginVersion=1.0-SNAPSHOT
 
+# includeVcs = true
 
 # Version numbers for external libraries that we depend on
 # These are the libraries that are used by our "base" modules
