--- a/server/build.gradle
+++ b/server/build.gradle
@@ -2,7 +2,7 @@ import org.labkey.gradle.util.BuildUtils
 
 apply plugin: 'org.labkey.database'
 
-BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath: ":remoteapi:java")
+BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath: ":remoteapi:java", transitive: true)
 BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath: ":schemas", depProjectConfig: "xmlSchema")
 BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath: ":server:api")
 BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath: ":server:internal")
