make module distribution depend on stageApp task factor out different types of distributions into separate tasks and remove need for projects for the three special distributions
SVN r48981 |2017-01-30 00:11:21 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,8 @@ allprojects {
           {
             tomcatDir = tomcatDirProp
             tomcatConfDir = "${tomcatDir}/conf/Catalina/localhost"
+            vcsRevision = BuildUtils.getStandardVCSProperties(project).getProperty("VcsRevision")
+            installerVersion = "${project.version}-${vcsRevision}"
           }
   repositories
           {
