--- a/settings.gradle
+++ b/settings.gradle
@@ -36,7 +36,7 @@ BuildUtils.includeBaseModules(this.settings)
 // The line below includes all modules in the server/modules directory (except the ones indicated as to be excluded)
 BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], excludedModules);
 
-// This line below includes all modules in the server/modules, server/customModules and server/optionalModules directories
+// The line below includes all modules in the server/modules, server/customModules and server/optionalModules directories
 //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
 
 // The line below includes just the modules in the externalModules/RGLab directory
@@ -46,8 +46,19 @@ BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR
 // N.B. If you include the ehr module from server/customModules, you will need to include some modules from the externalModules directory as well
 //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULE_DIRS, excludedExternalModules);
 
+// The line below includes only the external EHR modules
+//BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EHR_EXTERNAL_MODULE_DIRS, excludedExternalModules)
+
 // The line below will include the server/test project as well as the server/test/modules projects
 BuildUtils.includeTestModules(this.settings, rootDir)
+
+// The line below includes a set of individual modules (in this case all the EHR modules)
+//BuildUtils.includeModules(this.settings, [":server:customModules:EHR_ComplianceDB",
+//                                         ":server:customModules:WNPRC_EHR",
+//                                         ":server:customModules:cnprc_ehr",
+//                                         ":server:customModules:snprc_ehr",
+//                                         ":server:customModules:ehr",
+//                                         ":server:customModules:onprc_ehr"])
 
 // The line below is an example of how to include a single module
 //include ":server:optionalModules:workflow"
