--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,10 @@
 # in the context URL or you will get a 500 error from artifactory.)
 artifactory_contextUrl=https://artifactory.labkey.com/artifactory
 
+# The source and target versions of Java for compilation tasks
+sourceCompatibility=1.8
+targetCompatibility=1.8
+
 # indicates if we should use previously published artifacts or build from source
 # This setting applies to all projects unless overridden on command line or in a
 # project's own gradle.properties file.
