update version of htsjdk jar
SVN r49266 |2017-02-14 15:31:26 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -74,6 +74,8 @@ httpclientVersion=4.3.5
 httpcoreVersion=4.3.2
 httpmimeVersion=4.3.5
 
+htsjdkVersion=2.8.1
+
 jacksonVersion=2.6.4
 jacksonAnnotationsVersion=2.6.0
 
