--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ buildscript {
 }
 
 allprojects {
-  if (BuildUtils.shouldPublish(project))
+  if (BuildUtils.shouldPublish(project) || BuildUtils.shouldPublishDistribution(project))
   {
     apply plugin: 'com.jfrog.artifactory'
   }
@@ -157,7 +157,7 @@ task("showRepos", group: "Help", description: "Show the list of repositories cur
   }
 })
 
-if (BuildUtils.shouldPublish(project))
+if (BuildUtils.shouldPublish(project) || BuildUtils.shouldPublishDistribution(project))
 {
   artifactory {
     contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
