add version for yuiCompressor
SVN r49612 |2017-03-05 22:26:50 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -148,3 +148,7 @@ validationApiVersion=1.0.0.GA
 xercesImplVersion=2.11.0
 
 xmlbeansVersion=2.5.0
+
+# We had been referencing 2.4.8a in the external/lib/build directory.  2.4.8 is the latest available
+# externally.  Not sure if there is a difference.
+yuiCompressorVersion=2.4.8a
