update comment on yuiCompresserVersion
SVN r49616 |2017-03-06 02:58:55 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -149,6 +149,7 @@ xercesImplVersion=2.11.0
 
 xmlbeansVersion=2.5.0
 
-# We had been referencing 2.4.8a in the external/lib/build directory.  2.4.8 is the latest available
-# externally.  Not sure if there is a difference.
+# Version 2.4.8a is a custom built version of YUICompressor.
+# Note that 2.4.8 fails with absolute paths on Windows, https://github.com/yui/yuicompressor/issues/78,
+# but the issue is fixed on yuicompressor current master.
 yuiCompressorVersion=2.4.8a
