update to 17.2-SNAPSHOT version for labkey
SVN r49837 |2017-03-17 14:27:51 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ buildFromSource=true
 
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
-labkeyVersion=17.1
+labkeyVersion=17.2-SNAPSHOT
 
 # The current version number for the gradle plugins.
 bintrayPluginVersion=1.7.3
