--- a/settings.gradle
+++ b/settings.gradle
@@ -16,49 +16,68 @@ buildscript {
     }
 }
 
-
 /*
-  This file is used to determine which projects will be configured during the Gradle build of LabKey Server. 
+  This file is used to determine which projects will be configured during the Gradle build of LabKey Server.
 
-  You need only provide the leaves of the project tree here; a Gradle project will be created for each 
+  You need to provide only the leaves of the project tree here; a Gradle project will be created for each
   node in the tree with these leaves (e.g., 'server:modules:core' will create projects for ":server"
   ":server:modules" and ":server:modules:core").
  */
-// a set of directory names that correspond to modules to be excluded from configuration
-List<String> apiModules = ['labkey-api-js', 'labkey-api-r', 'labkey-api-python']
-List<String> excludedModules = ["movies", "test"] + BuildUtils.EHR_MODULE_NAMES + apiModules
-//List<String> excludedModules = ["movies"] + apiModules
-List<String> excludedExternalModules = ["nlp", "test"]
 
-// The line below includes the :server:bootstrap, "server"api, :schemas, :server:internal and :remotapi:java modules
+// The line below includes the set of modules for a minimally functional LabKey server
 BuildUtils.includeBaseModules(this.settings)
 
-// The line below includes all modules in the server/modules directory (except the ones indicated as to be excluded)
-BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], excludedModules);
+// Using the property 'moduleSet', you can apply a settings script from another location
+if (hasProperty('moduleSet'))
+{
+    switch (moduleSet)
+    {
+        case 'distributions':
+            // this just adds the distribution projects so we do want to fall through to the all case here
+            apply from: 'gradleSettings/distributions.gradle'
+        case 'all':
+            apply from: 'gradleSettings/all.gradle'
+            break
+        case 'community':
+            apply from: 'gradleSettings/community.gradle'
+            break
+    }
+}
+else
+{
+    // a set of directory names that correspond to modules to be excluded from configuration
+    List<String> apiModules = ['labkey-api-js', 'labkey-api-r', 'labkey-api-python']
+    List<String> excludedModules = ["movies", "test"] + BuildUtils.EHR_MODULE_NAMES + apiModules
+    //List<String> excludedModules = ["movies"] + apiModules
+    List<String> excludedExternalModules = ["nlp", "test"]
 
-// The line below includes all modules in the server/modules, server/customModules and server/optionalModules directories
-//BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
+    // The line below includes all modules in the server/modules directory (except the ones indicated as to be excluded)
+    BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], excludedModules);
 
-// The line below includes just the modules in the externalModules/RGLab directory
-//BuildUtils.includeModules(this.settings, rootDir, ["externalModules/RGLab"], excludedExternalModules);
+    // The line below includes all modules in the server/modules, server/customModules and server/optionalModules directories
+    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
 
-// The line below includes all modules in the externalModules directory (except the ones indicates as to be excluded)
-// N.B. If you include the ehr module from server/customModules, you will need to include some modules from the externalModules directory as well
-//BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULE_DIRS, excludedExternalModules);
+    // The line below includes just the modules in the externalModules/RGLab directory
+    //BuildUtils.includeModules(this.settings, rootDir, ["externalModules/RGLab"], excludedExternalModules);
 
-// The line below includes only the external EHR modules
-//BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EHR_EXTERNAL_MODULE_DIRS, excludedExternalModules)
+    // The line below includes all modules in the externalModules directory (except the ones indicates as to be excluded)
+    // N.B. If you include the ehr module from server/customModules, you will need to include some modules from the externalModules directory as well
+    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULE_DIRS, excludedExternalModules);
 
-// The line below will include the server/test project as well as the server/test/modules projects
-BuildUtils.includeTestModules(this.settings, rootDir)
+    // The line below includes only the external EHR modules
+    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EHR_EXTERNAL_MODULE_DIRS, excludedExternalModules)
 
-// The line below includes a set of individual modules (in this case all the EHR modules)
-//BuildUtils.includeModules(this.settings, [":server:customModules:EHR_ComplianceDB",
-//                                         ":server:customModules:WNPRC_EHR",
-//                                         ":server:customModules:cnprc_ehr",
-//                                         ":server:customModules:snprc_ehr",
-//                                         ":server:customModules:ehr",
-//                                         ":server:customModules:onprc_ehr"])
+    // The line below will include the server/test project as well as the server/test/modules projects
+    BuildUtils.includeTestModules(this.settings, rootDir)
 
-// The line below is an example of how to include a single module
-//include ":server:optionalModules:workflow"
+    // The line below includes a set of individual modules (in this case all the EHR modules)
+    //BuildUtils.includeModules(this.settings, [":server:customModules:EHR_ComplianceDB",
+    //                                         ":server:customModules:WNPRC_EHR",
+    //                                         ":server:customModules:cnprc_ehr",
+    //                                         ":server:customModules:snprc_ehr",
+    //                                         ":server:customModules:ehr",
+    //                                         ":server:customModules:onprc_ehr"])
+
+    // The line below is an example of how to include a single module
+    //include ":server:optionalModules:workflow"
+}
