--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ allprojects {
   {
     apply plugin: 'com.jfrog.artifactory'
   }
+//  project.tasks.withType(JavaCompile) {
+//    JavaCompile compile -> compile.options.incremental = true  // Gradle 3.4
+//  }
 }
 
 // We need the tomcat home directory to find certain dependencies for our build process.
@@ -67,6 +70,7 @@ allprojects {
   apply plugin: 'org.labkey.base'
   group  'org.labkey'
   version BuildUtils.getVersionNumber(project)
+
   ext
           {
             tomcatDir = tomcatDirProp
@@ -115,7 +119,6 @@ allprojects {
             flatDir dirs: "${tomcatDir}/lib"
             flatDir dirs: "${tomcatDir}/bin"  // for tomcat-juli.jar (required with jsp compile) and bootstrap.jar
           }
-
   configurations.all {
     // Check for updates every build for SNAPSHOT dependencies
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
@@ -128,6 +131,8 @@ allprojects {
               force "commons-beanutils:commons-beanutils:${commonsBeanutilsVersion}"
               // we get different versions of slf4j-log4j12 from different transitive dependencies.
               force "org.slf4j:slf4j-log4j12:${slf4jLog4j12Version}"
+              // This version overrides the one brought in by picard 2.2.4, which does not do well with creating test suites the way we want
+              force "org.reflections:reflections:${reflectionsVersion}"
               dependencySubstitution {
                 // Because the client api artifact name is not the same as the directory structure, we use
                 // Gradle's dependency substitution so the dependency will appear correctly in the pom files that
