--- a/gradle.properties
+++ b/gradle.properties
@@ -18,10 +18,10 @@ buildFromSource=true
 # override in an individual module's gradle.properties file as necessary 
 labkeyVersion=17.2-SNAPSHOT
 
-# The current version number for the gradle plugins.
+# The current version numbers for the gradle plugins.
 bintrayPluginVersion=1.7.3
 gradleNodePluginVersion=0.13
-gradlePluginsVersion=0.9.3
+gradlePluginsVersion=0.9.4
 versioningPluginVersion=1.0
 
 # includeVcs = true
