use fixed version of buildInfo plugin from jfrog
SVN r50257 |2017-04-04 15:19:04 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
   }
   dependencies {
-    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
+    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:${buildInfoExtractorGradleVersion}"
     classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:${bintrayPluginVersion}"
     classpath "com.moowork.gradle:gradle-node-plugin:${gradleNodePluginVersion}"
     classpath "org.labkey.build:versioning:${versioningPluginVersion}"
