--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ labkeyVersion=17.2-SNAPSHOT
 
 # The current version numbers for the gradle plugins.
 bintrayPluginVersion=1.7.3
+buildInfoExtractorGradleVersion=4.1.1
 gradleNodePluginVersion=0.13
 gradlePluginsVersion=0.9.5
 versioningPluginVersion=1.0
