add libs-release as a buildscript repository
SVN r50292 |2017-04-05 14:56:31 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
     maven {
       url "${artifactory_contextUrl}/plugins-release-local"
     }
+    maven {
+      url "${artifactory_contextUrl}/libs-release"
+    }
   }
   dependencies {
     classpath "org.jfrog.buildinfo:build-info-extractor-gradle:${buildInfoExtractorGradleVersion}"
