add libs-release in settings buildscript repositories as well
SVN r50293 |2017-04-05 15:30:50 +0000

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,11 @@ import org.labkey.gradle.util.BuildUtils
 
 buildscript {
     repositories {
-      jcenter()
-      maven {
+        jcenter()
+        maven {
+            url "${artifactory_contextUrl}/libs-release"
+        }
+        maven {
             url "${artifactory_contextUrl}/${gradlePluginsVersion.endsWith('SNAPSHOT') ? 'plugins-snapshot-local' : 'plugins-release-local'}"
         }
     }
