--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,9 @@ allprojects {
                 force "xerces:xercesImpl:${xercesImplVersion}"
                 force "log4j:log4j:${log4jVersion}"
                 force "commons-dbcp:commons-dbcp:${commonsDbcpVersion}"
+                force "commons-io:commons-io:${commonsIoVersion}"
+                force "commons-logging:commons-logging:${commonsLoggingVersion}"
+                force "commons-pool:commons-pool:${commonsPoolVersion}"
                 dependencySubstitution {
                     // Because the client api artifact name is not the same as the directory structure, we use
                     // Gradle's dependency substitution so the dependency will appear correctly in the pom files that
