--- a/gradle.properties
+++ b/gradle.properties
@@ -56,6 +56,7 @@ commonsDigesterVersion=1.8.1
 commonsFileuploadVersion=1.3.1
 commonsIoVersion=2.4
 commonsLang3Version=3.4
+commonsLoggingVersion=1.2
 commonsMath3Version=3.6.1
 commonsNetVersion=3.3
 commonsPoolVersion=1.6
