remove tcrdb module (temporarily) since the extra verbose logging there causes NPEs for Beanutils converter class
SVN r50507 |2017-04-16 23:24:00 +0000

--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -10,7 +10,7 @@ import org.labkey.gradle.util.BuildUtils
 // a set of directory names that correspond to modules to be excluded from configuration
 List<String> apiModules = ['labkey-api-js', 'labkey-api-r', 'labkey-api-python']
 List<String> excludedModules = ["movies"] + apiModules
-List<String> excludedExternalModules = ["nlp", "test"]
+List<String> excludedExternalModules = ["nlp", "test", "tcrdb"]
 
 // This line below inclues all modules in the server/modules, server/customModules and server/optionalModules directories
 BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
