re-enable tcrdb module (mixcr jar file moved out of classpath)
SVN r50555 |2017-04-19 21:46:05 +0000

--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -6,7 +6,7 @@ import org.labkey.gradle.util.BuildUtils
  */
 // a set of directory names that correspond to modules to be excluded from configuration
 List<String> excludedModules = ["movies"] + BuildUtils.EHR_MODULE_NAMES 
-List<String> excludedExternalModules = ["nlp", "test", "tcrdb"]
+List<String> excludedExternalModules = ["nlp", "test"]
 
 // This line below inclues all modules in the server/modules, server/customModules and server/optionalModules directories
 BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
