Create JsDoc task so input files can be configured through the extension in the build file
SVN r50758 |2017-05-01 18:06:17 +0000

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -73,3 +73,15 @@ if (project.findProject(":server:optionalModules:freezerpro") != null)
 
 project.xsdDoc.xsdFiles=xsdFiles
 
+project.jsDoc.paths = [
+    "api/webapp/clientapi",
+    "api/webapp/clientapi/dom",
+    "api/webapp/clientapi/core",
+    "api/webapp/clientapi/ext3",
+    "api/webapp/clientapi/ext4",
+    "api/webapp/clientapi/ext4/data",
+    "internal/webapp/labkey.js",
+    "modules/visualization/resources/web/vis/genericChart/genericChartHelper.js",
+    "modules/visualization/resources/web/vis/timeChart/timeChartHelper.js",
+    "internal/webapp/vis/src"
+]
