Include community distribution in community moduleSet
SVN r50922 |2017-05-09 16:17:01 +0000

--- a/gradle/settings/community.gradle
+++ b/gradle/settings/community.gradle
@@ -4,3 +4,4 @@ BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include ":server:distributions:test"
+include ":server:distributions:community"
