--- a/gradle/settings/community.gradle
+++ b/gradle/settings/community.gradle
@@ -4,4 +4,5 @@ BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include ":server:distributions:test"
+include ":server:distributions:base"
 include ":server:distributions:community"
