Spec ID: 29080  - Comment out createModule import until new gradlePlugins release
SVN r51029 |2017-05-15 18:42:59 +0000

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,4 +1,4 @@
-import org.labkey.gradle.task.CreateModule
+//import org.labkey.gradle.task.CreateModule
 import org.labkey.gradle.util.BuildUtils
 
 apply plugin: 'org.labkey.database'
