--- a/settings.gradle
+++ b/settings.gradle
@@ -75,8 +75,5 @@ else
     //                                         ":server:customModules:onprc_ehr"])
 
     // The line below is an example of how to include a single module
-//    include ":server:optionalModules:assayRequest"
-//    include ":server:optionalModules:biologics"
-//    include ":server:optionalModules:recipe"
-    include ":server:optionalModules:accounts"
+    //include ":server:optionalModules:workflow"
 }
