--- a/settings.gradle
+++ b/settings.gradle
@@ -77,3 +77,17 @@ else
     // The line below is an example of how to include a single module
     //include ":server:optionalModules:workflow"
 }
+if (hasProperty('extraIncludes'))
+{
+    for (String extraInclude : "${extraIncludes}".split(","))
+    {
+        include "${extraInclude}"
+    }
+}
+if (hasProperty('extraExcludes'))
+{
+    for (String extraExclude : "${extraExcludes}".split(","))
+    {
+        include "${extraExclude}"
+    }
+}
