--- a/settings.gradle
+++ b/settings.gradle
@@ -88,6 +88,6 @@ if (hasProperty('extraExcludes'))
 {
     for (String extraExclude : "${extraExcludes}".split(","))
     {
-        include "${extraExclude}"
+        exclude "${extraExclude}"
     }
 }
